# FakeKeyboard

./: .clang-format  .gitmodules  CMakeLists.txt  README.org  main.c  main.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.cpp  usb_descriptors.h
.github/workflows/: build.yml  format-check.yml  release.yml
include/: tusb_config.h  usb_descriptors.hpp
src/: fake_keyboard.cpp  fake_keyboard_mouse.cpp  fake_mouse.cpp  usb_descriptors.cpp
